# Jazz

./: .gitignore  Cargo.toml  LICENSE  README.md  appveyor.yml  rustfmt.toml
benches/: factorial_bench.rs
bytecode/: Cargo.toml
bytecode/src/: assembler.rs  opcode.rs
examples/: access.jazz  classes.jazz  factorial.jazz  for.jazz  hello_world.jazz  isa.jazz  map.jazz  variables.jazz  while.jazz
jazzc/: Cargo.toml
jazzc/src/: ircode.rs  lib.rs  main.rs  parser.rs
rewrite/: meson.build
simple_jazz/: Cargo.toml
simple_jazz/examples/: math.rs  simple_ast.rs
simple_jazz/src/: builder.rs
src/: builtins.rs  class.rs  compiler.rs  frame.rs  function.rs  index.rs  ircode.rs  jit.rs  lib.rs  machine.rs  main.rs  object.rs  object_info.rs  object_pool.rs  opcodes.rs  parser.rs  static_root.rs  string.rs  value.rs
src/jit/cpu/: mod.rs
src/jit/cpu/x64/: mod.rs  param.rs  reg.rs
src/std_library/: mod.rs
stdlib/: io.jazz  math.jazz
tests/: factorial.rs  load_at.rs  store_at_load_at.rs
vm/: Cargo.toml  appveyor.yml
vm/benches/: factorial_bench.rs
vm/bytecode/src/: lib.rs  main.rs  parser.rs
vm/simple_jazz/examples/: math.rs  simple_ast.rs
vm/simple_jazz/src/: builder.rs  context.rs  lib.rs
vm/src/: error.rs  frame.rs  function.rs  lib.rs  machine.rs  main.rs  object.rs  object_info.rs  object_pool.rs  opcodes.rs  static_root.rs  string.rs  value.rs
vm/src/jit/cpu/x64/: param.rs  reg.rs
vm/tests/: factorial.rs  load_at.rs  store_at_load_at.rs
