[package]
name = "jazz"
version = "0.1.90"
authors = ["Adel Prokurov <adel.prokurov@protonmail.com>"]
edition = "2018"
description = "Jazz Virtual Machine"
readme = "README.md"
repository = "https://github.com/playXE/Jazz"
keywords = ["vm","register","register-based"]
license = "MIT"


[profile.dev]

[profile.release]
lto = true

[dependencies]
time = "0.1.40"
libc = "0.2.43"

simple_jazz = {path = "simple_jazz"}