[package]
name = "jazz-vm"
version = "0.2.2"
authors = ["Adel Prokurov <adel.prokurov@protonmail.com>"]
edition = "2018"
description = "Jazz Virtual Machine"
readme = "README.md"
repository = "https://github.com/playXE/Jazz"
keywords = ["vm","register","register-based"]
license = "MIT"


[profile.dev]

[profile.release]
lto = true

[dependencies]
time = "0.1.40"
libc = "0.2.43"
colored = "1.6.1"